# lxd-hyper

./: README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
lxd/: apps.py  bytes2human.py  context_processors.py  create_instance.py  forms.py  urls.py  views.py
lxd/static/css/: style.css
lxd/templates/lxd/: about.html  base.html  certificates.html  container_detail.html  create_instance.html  detail.html  image_detail.html  images.html  index.html  network_detail.html  networks.html  profile_detail.html  profiles.html  project_detail.html  projects.html  snapshot_create.html  snapshot_detail.html  snapshots.html  storage.html  storage_detail.html  tips.html  vm_detail.html
lxdhyper/: asgi.py  settings.py  urls.py  wsgi.py
